[project]
name = "ReLight"
description = "Transform your images with cinematic lighting effects in a single click! ReLight is a powerful ComfyUI v3 compatible node that adds professional-grade lighting capabilities including multiple light sources, rim lighting, and 3D lighting simulation."
version = "2.0.1"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "scipy"]

[project.urls]
Repository = "https://github.com/EnragedAntelope/comfyui-relight"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-ReLight"
Icon = ""

